tests/baselines/reference/indexerA.errors.txt
indexerA.ts(2,5): error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.


==== indexerA.ts (1 errors) ====
    class JQueryElement {
        id:string;
        ~~
!!! error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
    }
    
    class JQuery {
        [n:number]:JQueryElement
    }
    
    var jq:JQuery={ 0: { id : "a" }, 1: { id : "b" } };
    jq[0].id;